RESOLVED FIXED33988
Zoom applied to embedded SVG incorrectly
https://bugs.webkit.org/show_bug.cgi?id=33988
Summary Zoom applied to embedded SVG incorrectly
mitz
Reported 2010-01-21 22:00:29 PST
Created attachment 47176 [details] Test case To reproduce, open the attached test case in Safari, select View > Zoom Text Only, and then choose View > Zoom In a few times. Notice that the black HTML div stays put, but the blue SVG square moves and grows in size. Deselect View > Zoom Text Only. Notice that the blue SVG rectangle is still not at the top left of the black box as it should be. The issue appears to be that SVGSVGElement::currentScale() was designed for standalone SVG documents, where it’s appropriate to take the Frame’s zoom factor. For embedded SVG, this results in either applying text zoom to SVG (which is not text) or applying the full page zoom factor a second time to SVG.
Attachments
Test case (302 bytes, application/xhtml+xml)
2010-01-21 22:00 PST, mitz
no flags
Patch (20.84 KB, patch)
2010-01-21 23:54 PST, mitz
darin: review+
mitz
Comment 1 2010-01-21 22:01:27 PST
mitz
Comment 2 2010-01-21 23:54:39 PST
mitz
Comment 3 2010-01-22 00:20:57 PST
Note You need to log in before you can comment on or make changes to this bug.