<rdar://problem/7568696> Zoom applied to embedded SVG incorrectly https://bugs.webkit.org/show_bug.cgi?id=33988

Reviewed by Darin Adler.

WebCore:

Test: svg/custom/text-zoom.xhtml

* svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::SVGSVGElement): Initialize m_scale.
(WebCore::SVGSVGElement::currentScale): If this is the document element,
return the frame’s zoom factor. Otherwise, return m_scale.
(WebCore::SVGSVGElement::setCurrentScale): If this is the document element,
set the frame’s zoom factor. Otherwise, set m_scale and mark for layout.
* svg/SVGSVGElement.h: Added m_scale member.

LayoutTests:

* svg/custom/text-zoom-expected.checksum: Added.
* svg/custom/text-zoom-expected.png: Added.
* svg/custom/text-zoom-expected.txt: Added.
* svg/custom/text-zoom.xhtml: Added.



Canonical link: https://commits.webkit.org/45083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53684 268f45cc-cd09-0410-ab3c-d52691b4dbfc